Fix scrolls (#73)
* Fix overflow issues and update dependencies

Adjusted styles to prevent scrolling overflows and improved layout consistency. Also updated several dependencies in the package-lock file to their latest versions for better security and functionality.

* Fix scrolling in scroll container

--- a/src/renderer/index.scss
+++ b/src/renderer/index.scss
@@ -31,3 +31,8 @@
 * {
   font-family: Poppins;
 }
+
+body {
+  max-height: 100vh;
+  overflow: hidden;
+}
